--- a/src/main/resources/dev/nemi/bricksfx/playground-view.fxml
+++ b/src/main/resources/dev/nemi/bricksfx/playground-view.fxml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
+<?import javafx.scene.canvas.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="dev.nemi.bricksfx.PlaygroundView"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="850.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.nemi.bricksfx.playground.PlaygroundControl">
+    <children>
+        <ToolBar prefHeight="50.0" prefWidth="200.0">
+            <items>
+                <Spinner fx:id="sizeSpinner" editable="true">
+                    <valueFactory>
+                        <SpinnerValueFactory.IntegerSpinnerValueFactory initialValue="5" max="100" min="1" />
+                    </valueFactory>
+                </Spinner>
+                <Button mnemonicParsing="false" text="Button" />
+            </items>
+        </ToolBar>
+      <Pane style="-fx-background-color: black;">
+         <children>
+              <Canvas fx:id="canvas" height="800.0" onMouseDragged="#onCanvasMouseDrag" onMousePressed="#onCanvasMouseDown" width="800.0" />
+         </children>
+      </Pane>
+    </children>
+</VBox>
